--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,13 @@ body {
     height: 200px;
 }
 
+.container{
+              
+              max-width:800px;
+              margin: 0 auto;
+              color:gray;
+              font-family:sans-serif;
+              padding-top: 50;
+              padding-left: 40;
+              padding-right: 20;             
+}
